--- a/modules/bind9/db.priveasy.org
+++ b/modules/bind9/db.priveasy.org
@@ -19,7 +19,7 @@ $TTL	10800
 
 ; A/AAA Records
 @	IN	A	213.108.110.213
-@	IN	AAA	2a00:c6c0:0:133:6:5035:7663:2d30
+@	IN	AAAA	2a00:c6c0:0:133:6:5035:7663:2d30
 
 
 ; CNAME Records
